<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editWeight"
        android:hint="Weight (kg)"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp" />

    <EditText
        android:id="@+id/editHeight"
        android:hint="Height (cm)"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp" />

    <Button
        android:id="@+id/btnCalculate"
        android:text="Calculate BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textResult"
        android:text="Result will show here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"/>
</LinearLayout>
